charts/mediaserver/recommendarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendarr
  labels:
    app: recommendarr
    app.kubernetes.io/name: recommendarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendarr
      app.kubernetes.io/name: recommendarr
  template:
    metadata:
      labels:
        app: recommendarr
        app.kubernetes.io/name: recommendarr
    spec:
      containers:
        - name: recommendarr
          image: tannermiddleton/recommendarr:latest
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: /app/server/data
              subPath: "config/recommendarr"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
