charts/mediaserver/recommendarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: recommendar
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - recommendar.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: recommendar
          namespace: mediaserver
          port: 3000
